[gd_scene load_steps=13 format=2]

[ext_resource path="res://Fallout DeMakeUs Sprites/Pip_boy/pip_boy.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Pause_menu.gd" type="Script" id=2]
[ext_resource path="res://Fallout DeMakeUs Sprites/fonts/PressStart2P-vaV7.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Fallout DeMakeUs Sprites/Pip_boy/Text_arrow_green.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 29
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 25
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 30
font_data = ExtResource( 3 )

[node name="Pause_menu" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="Control" type="Control" parent="CanvasLayer"]
margin_right = 1024.0
margin_bottom = 592.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Anchor" type="Control" parent="CanvasLayer/Control"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -512.0
margin_top = -592.0
margin_right = 512.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pip_boy_Menu" type="TextureRect" parent="CanvasLayer/Control/Anchor"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 8.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Nav_buttons" type="Control" parent="CanvasLayer/Control/Anchor/Pip_boy_Menu"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Items" type="Button" parent="CanvasLayer/Control/Anchor/Pip_boy_Menu/Nav_buttons"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 272.0
margin_top = 80.0
margin_right = 448.0
margin_bottom = 128.0
focus_neighbour_left = NodePath("../Skills")
focus_neighbour_top = NodePath("../Exit")
focus_neighbour_right = NodePath("../Skills")
focus_neighbour_bottom = NodePath("../Stats")
text = "Items"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item_pos" type="Position2D" parent="CanvasLayer/Control/Anchor/Pip_boy_Menu/Nav_buttons/Items"]
position = Vector2( -16, 32 )

[node name="Items_label" type="RichTextLabel" parent="CanvasLayer/Control/Anchor/Pip_boy_Menu/Nav_buttons/Items"]
self_modulate = Color( 0.0117647, 0.996078, 0.0509804, 1 )
anchor_top = 0.333
anchor_right = 1.0
anchor_bottom = 1.333
margin_top = 0.0159998
margin_bottom = 0.0159988
custom_fonts/normal_font = SubResource( 1 )
text = "Items"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="Button" parent="CanvasLayer/Control/Anchor/Pip_boy_Menu/Nav_buttons"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 272.0
margin_top = 160.0
margin_right = 448.0
margin_bottom = 208.0
focus_neighbour_left = NodePath("../Options")
focus_neighbour_top = NodePath("../Items")
focus_neighbour_right = NodePath("../Options")
focus_neighbour_bottom = NodePath("../Save")
text = "Stats"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats_label" type="RichTextLabel" parent="CanvasLayer/Control/Anchor/Pip_boy_Menu/Nav_buttons/Stats"]
self_modulate = Color( 0.0117647, 0.996078, 0.0509804, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 16.0
margin_bottom = 16.0
custom_fonts/normal_font = SubResource( 2 )
text = "Stats"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="stats_pos" type="Position2D" parent="CanvasLayer/Control/Anchor/Pip_boy_Menu/Nav_buttons/Stats"]
position = Vector2( -16, 32 )

[node name="Save" type="Button" parent="CanvasLayer/Control/Anchor/Pip_boy_Menu/Nav_buttons"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 272.0
margin_top = 256.0
margin_right = 448.0
margin_bottom = 304.0
focus_neighbour_left = NodePath("../Exit")
focus_neighbour_top = NodePath("../Stats")
focus_neighbour_right = NodePath("../Exit")
focus_neighbour_bottom = NodePath("../Skills")
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="save_pos" type="Position2D" parent="CanvasLayer/Control/Anchor/Pip_boy_Menu/Nav_buttons/Save"]
position = Vector2( -16, 16 )

[node name="Save_label" type="RichTextLabel" parent="CanvasLayer/Control/Anchor/Pip_boy_Menu/Nav_buttons/Save"]
self_modulate = Color( 0.0117647, 0.996078, 0.0509804, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/normal_font = SubResource( 3 )
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Skills" type="Button" parent="CanvasLayer/Control/Anchor/Pip_boy_Menu/Nav_buttons"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 544.0
margin_top = 80.0
margin_right = 720.0
margin_bottom = 128.0
focus_neighbour_left = NodePath("../Items")
focus_neighbour_top = NodePath("../Save")
focus_neighbour_right = NodePath("../Items")
focus_neighbour_bottom = NodePath("../Options")
text = "Skills"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="skills_pos" type="Position2D" parent="CanvasLayer/Control/Anchor/Pip_boy_Menu/Nav_buttons/Skills"]
position = Vector2( -32, 32 )

[node name="skills_label" type="RichTextLabel" parent="CanvasLayer/Control/Anchor/Pip_boy_Menu/Nav_buttons/Skills"]
self_modulate = Color( 0.0117647, 0.996078, 0.0509804, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 16.0
margin_bottom = 16.0
custom_fonts/normal_font = SubResource( 4 )
text = "Skills"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="CanvasLayer/Control/Anchor/Pip_boy_Menu/Nav_buttons"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 544.0
margin_top = 160.0
margin_right = 720.0
margin_bottom = 208.0
focus_neighbour_left = NodePath("../Stats")
focus_neighbour_top = NodePath("../Skills")
focus_neighbour_right = NodePath("../Stats")
focus_neighbour_bottom = NodePath("../Exit")
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options_pos" type="Position2D" parent="CanvasLayer/Control/Anchor/Pip_boy_Menu/Nav_buttons/Options"]
position = Vector2( -32, 32 )

[node name="options_label" type="RichTextLabel" parent="CanvasLayer/Control/Anchor/Pip_boy_Menu/Nav_buttons/Options"]
self_modulate = Color( 0.0117647, 0.996078, 0.0509804, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 16.0
margin_bottom = 16.0
custom_fonts/normal_font = SubResource( 5 )
text = "Options"

[node name="Exit" type="Button" parent="CanvasLayer/Control/Anchor/Pip_boy_Menu/Nav_buttons"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 544.0
margin_top = 240.0
margin_right = 720.0
margin_bottom = 288.0
focus_neighbour_left = NodePath("../Save")
focus_neighbour_top = NodePath("../Options")
focus_neighbour_right = NodePath("../Save")
focus_neighbour_bottom = NodePath("../Items")
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit_pos" type="Position2D" parent="CanvasLayer/Control/Anchor/Pip_boy_Menu/Nav_buttons/Exit"]
position = Vector2( -32, 32 )

[node name="exit_label" type="RichTextLabel" parent="CanvasLayer/Control/Anchor/Pip_boy_Menu/Nav_buttons/Exit"]
self_modulate = Color( 0.0117647, 0.996078, 0.0509804, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 16.0
margin_bottom = 16.0
custom_fonts/normal_font = SubResource( 6 )
text = "Exit"

[node name="Items_Nav" type="Control" parent="CanvasLayer/Control/Anchor"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="CanvasLayer/Control/Anchor/Items_Nav"]
self_modulate = Color( 0.0117647, 0.996078, 0.0509804, 0 )
margin_left = 240.0
margin_top = 64.0
margin_right = 400.0
margin_bottom = 96.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back_label" type="RichTextLabel" parent="CanvasLayer/Control/Anchor/Items_Nav/Back"]
self_modulate = Color( 0.0117647, 0.996078, 0.0509804, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/normal_font = SubResource( 7 )
text = "Back"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="back_pos" type="Position2D" parent="CanvasLayer/Control/Anchor/Items_Nav/Back"]
position = Vector2( -16, 16 )

[node name="Items_Exit" type="Button" parent="CanvasLayer/Control/Anchor/Items_Nav"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 240.0
margin_top = 256.0
margin_right = 400.0
margin_bottom = 288.0
text = "EXIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="items_exit_pos" type="Position2D" parent="CanvasLayer/Control/Anchor/Items_Nav/Items_Exit"]
position = Vector2( -16, 16 )
__meta__ = {
"_edit_lock_": true
}

[node name="Items_Exit_Label" type="RichTextLabel" parent="CanvasLayer/Control/Anchor/Items_Nav/Items_Exit"]
self_modulate = Color( 0.0117647, 0.996078, 0.0509804, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/normal_font = SubResource( 8 )
text = "Exit"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Item_slots" type="Control" parent="CanvasLayer/Control/Anchor/Items_Nav"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item1" type="Panel" parent="CanvasLayer/Control/Anchor/Items_Nav/Item_slots"]
margin_left = 240.0
margin_top = 112.0
margin_right = 416.0
margin_bottom = 144.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="item2" type="Panel" parent="CanvasLayer/Control/Anchor/Items_Nav/Item_slots"]
margin_left = 240.0
margin_top = 160.0
margin_right = 416.0
margin_bottom = 192.0

[node name="item3" type="Panel" parent="CanvasLayer/Control/Anchor/Items_Nav/Item_slots"]
margin_left = 240.0
margin_top = 208.0
margin_right = 416.0
margin_bottom = 240.0

[node name="Item_description" type="Panel" parent="CanvasLayer/Control/Anchor/Items_Nav"]
margin_left = 240.0
margin_top = 288.0
margin_right = 752.0
margin_bottom = 352.0

[node name="Item_picture" type="Panel" parent="CanvasLayer/Control/Anchor/Items_Nav"]
margin_left = 480.0
margin_top = 80.0
margin_right = 752.0
margin_bottom = 256.0

[node name="Item_scroll" type="Panel" parent="CanvasLayer/Control/Anchor/Items_Nav"]
margin_left = 432.0
margin_top = 80.0
margin_right = 448.0
margin_bottom = 256.0

[node name="Menu_Arrow" type="Sprite" parent="CanvasLayer/Control/Anchor"]
position = Vector2( 256, 112 )
rotation = -1.5708
scale = Vector2( 2.1244, 2.45452 )
texture = ExtResource( 4 )
[connection signal="focus_entered" from="CanvasLayer/Control/Anchor/Pip_boy_Menu/Nav_buttons/Items" to="." method="_on_Items_focus_entered"]
[connection signal="pressed" from="CanvasLayer/Control/Anchor/Pip_boy_Menu/Nav_buttons/Items" to="." method="_on_Items_pressed"]
[connection signal="focus_entered" from="CanvasLayer/Control/Anchor/Pip_boy_Menu/Nav_buttons/Stats" to="." method="_on_Stats_focus_entered"]
[connection signal="focus_entered" from="CanvasLayer/Control/Anchor/Pip_boy_Menu/Nav_buttons/Save" to="." method="_on_Save_focus_entered"]
[connection signal="focus_entered" from="CanvasLayer/Control/Anchor/Pip_boy_Menu/Nav_buttons/Skills" to="." method="_on_Skills_focus_entered"]
[connection signal="focus_entered" from="CanvasLayer/Control/Anchor/Pip_boy_Menu/Nav_buttons/Options" to="." method="_on_Options_focus_entered"]
[connection signal="focus_entered" from="CanvasLayer/Control/Anchor/Pip_boy_Menu/Nav_buttons/Exit" to="." method="_on_Exit_focus_entered"]
[connection signal="pressed" from="CanvasLayer/Control/Anchor/Pip_boy_Menu/Nav_buttons/Exit" to="." method="_on_Exit_pressed"]
[connection signal="focus_entered" from="CanvasLayer/Control/Anchor/Items_Nav/Back" to="." method="_on_Back_focus_entered"]
[connection signal="pressed" from="CanvasLayer/Control/Anchor/Items_Nav/Back" to="." method="_on_Back_pressed"]
[connection signal="focus_entered" from="CanvasLayer/Control/Anchor/Items_Nav/Items_Exit" to="." method="_on_Items_Exit_focus_entered"]
[connection signal="pressed" from="CanvasLayer/Control/Anchor/Items_Nav/Items_Exit" to="." method="_on_Items_Exit_pressed"]
